--- a/settings.json
+++ b/settings.json
@@ -21,5 +21,6 @@
     "typescript.updateImportsOnFileMove.enabled": "always",
     "git.enableSmartCommit": true,
     "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue"
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "python.jediEnabled": false
 }
