--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,8 @@
         "editor.formatOnSave": true
     },
     "[cpp]": {
-        "editor.formatOnSave": true
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "ms-vscode.cpptools"
     },
     "files.associations": {
         "*.js":"javascriptreact",
