--- a/settings.json
+++ b/settings.json
@@ -23,5 +23,6 @@
     "git.enableSmartCommit": true,
     "editor.suggestSelection": "first",
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "python.jediEnabled": false
+    "python.jediEnabled": false,
+    "python.languageServer": "Microsoft"
 }
