--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
     "editor.tabSize": 2,
     "javascript.updateImportsOnFileMove.enabled": "always",
+    "javascript.validate.enable": false,
     "editor.minimap.enabled": false,
     "files.trimTrailingWhitespace": true,
     "window.zoomLevel": 0,
